tests/NormalTests/paczka1/fuzzy1/84231565.err
Error in line 1: BHUtnSvy A750 66,6
Error in line 7: sCwqDiNq20 A962 86,0
Error in line 13: ks3N7Ut A701 65,8
Error in line 11: U4r S477 12,8
Error in line 25: U4r A750 30,2
Error in line 32: ks3N7Ut A701 4,2
